Sun Jan 16 23:26:58 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* m4/config_h.m4:

	  Removed autoheader template for ACE_HAS_SIGINFO_T.

	* configure.ac:

	  Simplified check for ACE_HAS_SIGINFO_T.
	  Added check for ACE_LACKS_SI_ADDR.
	  Added check for ACE_HAS_PTHREAD_NP_H.

Sun Jan 16 22:14:25 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/os_include/os_pthread.h:

	  #include <pthread_np.h> if ACE_HAS_PTHREAD_NP_H is defined.

	* ace/README:

	  Document new feature test macro ACE_HAS_PTHREAD_NP_H.

Sun Jan 16 18:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Stream.{h,cpp}:
          Don't implement the destructor of ACE_WChar_Codeset_Translator
          in the header file, but in the cpp file. Fixes link errors
          with TAO and Cygwin. Thanks to <mcgahan at sparta dot com>
          for reporting this. This fixes bugzilla id [2020].

Sat Jan 15 22:22:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/HTBP/Send_Large_Msg/Send_Large_Msg.mpc:
          Also build the client after the Test_Output library

Thu Jan 13 23:32:03 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Capabilities.cpp:
	* ace/Configuration.cpp:
	* ace/Connector.cpp:
	* ace/Containers_T.cpp:
	* ace/Dev_Poll_Reactor.cpp:
	* ace/Dynamic_Service.cpp:
	* ace/FILE.cpp:
	* ace/LSOCK_Acceptor.cpp:
	* ace/LSOCK_Stream.cpp:
	* ace/Log_Msg.cpp:
	* ace/Message_Queue.cpp:
	* ace/Message_Queue_T.cpp:
	* ace/Naming_Context.cpp:
	* ace/OS_NS_fcntl.cpp:
	* ace/OS_NS_netdb.cpp:
	* ace/OS_NS_stdio.cpp:
	* ace/OS_NS_stropts.cpp:
	* ace/OS_NS_sys_uio.cpp:
	* ace/OS_NS_sys_utsname.cpp:
	* ace/OS_NS_time.cpp:
	* ace/OS_NS_unistd.inl:
	* ace/OS_NS_wchar.cpp:
	* ace/OS_Thread_Adapter.cpp:
	* ace/Obstack_T.cpp:
	* ace/POSIX_Asynch_IO.cpp:
	* ace/POSIX_CB_Proactor.cpp:
	* ace/POSIX_Proactor.cpp:
	* ace/Parse_Node.cpp:
	* ace/Remote_Name_Space.cpp:
	* ace/SOCK_Acceptor.cpp:
	* ace/SOCK_Connector.cpp:
	* ace/SOCK_Dgram_Mcast.cpp: